# service_auth

./: .dockerignore  .env.dist  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  makefile
.github/: dependabot.yml
.github/workflows/: dockerimage.yml  rust.yml
.helm/service_auth/templates/: service_auth.yaml
examples/: index.html
src/: main.rs
static/js/: index.js  login.js  logout.js  signup.js
