[package]
name = "service-auth"
version = "0.1.0"
authors = ["aedius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http="0.6.2"
frank_jwt="3.1.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0.41"