[package]
name = "service_auth"
version = "0.1.0"
authors = ["aedius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_token = { git = "https://github.com/horfimbor/mod_token" }
tiny_http="0.6.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0.102"
serde_json = "1.0.41"