[package]
name = "service_auth"
version = "0.1.0"
authors = ["aedius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_event = { git = "https://github.com/horfimbor/mod_event" }
mod_token = { git = "https://github.com/horfimbor/mod_token" }
event_auth = { git = "https://github.com/horfimbor/event_auth" }

bytes = "0.4"
eventstore = "0.7.3"
futures = "0.3"
mysql = "17.0.0"
rust-crypto = "^0.2"
serde = "1.0.104"
serde_json = "1.0.45"
serde_derive = "1.0"
tiny_http="0.6.2"
uuid = { version = "0.8", features = ["serde", "v4"] }